--- a/style.css
+++ b/style.css
@@ -7,14 +7,13 @@
   --Very-dark-blue: hsl(216, 50%, 16%);
   --Very-dark-blue-line: hsl(215, 32%, 27%);
   --White: hsl(0, 0%, 100%);
-  --soft-cyan:hsl(178deg 100% 50% / 47%);
+  --soft-cyan: hsl(178deg 100% 50% / 47%);
 }
 
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  border: 1px solid red;
 }
 body {
   font-size: 18px;
@@ -25,7 +24,6 @@ body {
   background-color: var(--Very-darkblue);
   font-family: "Outfit", sans-serif;
 }
-
 
 .nft-card-container {
   width: 350px;
@@ -41,47 +39,65 @@ body {
   -o-border-radius: 20px;
 }
 
-.container-image-nft{
-    width: 90%;
-    height: 80%;
-    margin: 20px auto;
-    position: relative;
+.container-image-nft {
+  width: 90%;
+  height: 100%;
+  margin: 20px auto;
+  position: relative;
 }
-.nft-card-header-image{
-    width: 100%;
-    border-radius: 20px;
-    -webkit-border-radius: 20px;
-    -moz-border-radius: 20px;
-    -ms-border-radius: 20px;
-    -o-border-radius: 20px;
-   ;
+.nft-card-header-image {
+  width: 315px;
+  height: 315px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
 }
-.overl{
-    border: 5px solid burlywood;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height:100%;
-    /* border-radius: 10px ;
-    -webkit-border-radius: 10px ;
-    -moz-border-radius: 10px ;
-    -ms-border-radius: 10px ;
-    -o-border-radius: 10px ; */
-    background-color: var(--soft-cyan);
+.overl {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 315px;
+  height: 315px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  background-color: var(--soft-cyan);
+  opacity: 0;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
 }
-.icon-view{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    -webkit-transform: translate(-50%,-50%);
-    -moz-transform: translate(-50%,-50%);
-    -ms-transform: translate(-50%,-50%);
-    -o-transform: translate(-50%,-50%);
+.container-image-nft:hover .overl {
+  opacity: 1;
+  cursor: pointer;
 }
 
-
+.icon-view {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all 0.2s ease;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+}
+.container-image-nft:hover .icon-view {
+  opacity: 1;
+  cursor: pointer;
+}
 
 .nft-card-heading,
 .nft-card-description-of-heading {
@@ -90,6 +106,15 @@ body {
 }
 .nft-card-heading {
   font-weight: 600;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+.nft-card-heading:hover {
+  color: var(--Cyan);
+  cursor: pointer;
 }
 .nft-card-description-of-heading {
   color: var(--Soft-blue);
@@ -139,6 +164,16 @@ footer p {
   align-self: center;
   margin-left: 15px;
   font-size: 16px;
+  transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+}
+
+footer p:hover {
+  color: var(--Cyan);
+  cursor: pointer;
 }
 footer p span {
   color: var(--Soft-blue);
